--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 authors = ["tsabelmann <tim.sabelmann@hotmail.de>"]
 edition = "2018"
 
+description = "A can-bus data analysis library"
 license-file = "LICENSE"
 documentation = "https://docs.rs/cantools"
 repository = "https://github.com/tsabelmann/cantools"
