--- a/.github/workflows/features.yml
+++ b/.github/workflows/features.yml
@@ -22,4 +22,4 @@ jobs:
         uses: actions-rs/cargo@v1
         with:
           command: hack
-          args: --feature-powerset --exclude-features bench_private check
+          args: --feature-powerset check
